feat: added linter, authentication for video uploading and user registration (#14)
