# lib/hexatube_web/controllers/user_registration_schemas.ex
@@ -1,0 +1,16 @@
+defmodule HexatubeWeb.UserRegistrationSchemas do
+  @moduledoc """
+  API requests validation schemas.
+  """
+  import Peri
+
+  defschema :new_user, %{
+    username: {:required, :string},
+    password: {:required, :string}
+  }
+
+  defschema :login, %{
+    username: {:required, :string},
+    password: {:required, :string}
+  }
+end
